Bug 692033: fix LZWEncode filter

Increment code size before writing out EOD when the last code reaches
the current limit code. Fix incorrect bytes or decoding errors at
the end of some LZW-encoded streams.